--- a/k8s/project1-deploy.yaml
+++ b/k8s/project1-deploy.yaml
@@ -37,24 +37,24 @@ spec:
     - port: 80         # 클라이언트가 접속할 포트
       targetPort: 8080 # 컨테이너 내부 포트
 
----
+# ---
 
-# 도메인을 통한 접근을 위한 Ingress 설정
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: petclinic-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /  # 경로 재작성 설정 (Ingress Controller 필요)
-spec:
-  rules:
-    - host: spring.mydomain.com  # 여기에 실제 연결할 도메인 입력
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: petclinic     # 연결할 서비스 이름
-                port:
-                  number: 80       # 서비스 노출 포트
+# # 도메인을 통한 접근을 위한 Ingress 설정
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: petclinic-ingress
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /  # 경로 재작성 설정 (Ingress Controller 필요)
+# spec:
+#   rules:
+#     - host: spring.mydomain.com  # 여기에 실제 연결할 도메인 입력
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: petclinic     # 연결할 서비스 이름
+#                 port:
+#                   number: 80       # 서비스 노출 포트
