--- a/k8s/project1-deploy.yaml
+++ b/k8s/project1-deploy.yaml
@@ -10,6 +10,11 @@ spec:
   selector:
     matchLabels:
       app: petclinic
+    annotations:                       # <--- 여기 annotations 추가
+       prometheus.io/scrape: "true"
+       prometheus.io/path: "/actuator/prometheus"
+       prometheus.io/port: "8080"
+
   template:
     metadata:
       labels:
