--- a/k8s/project1-deploy.yaml
+++ b/k8s/project1-deploy.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         app: petclinic
-        #release: prometheus
+        release: prometheus
       annotations:                       # <--- 여기 annotations 추가
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
