--- a/k8s/project1-deploy.yaml
+++ b/k8s/project1-deploy.yaml
@@ -30,36 +30,18 @@ spec:
 ---
 
 # 외부 접근을 위한 Service 정의 (LoadBalancer 타입)
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: petclinic
-# spec:
-#   selector:
-#     app: petclinic
-#   type: LoadBalancer  # 외부 IP 발급 (클라우드 환경일 경우)
-#   ports:
-#     - port: 80         # 클라이언트가 접속할 포트
-#       targetPort: 8080 # 컨테이너 내부 포트
 apiVersion: v1
 kind: Service
 metadata:
   name: petclinic
-  labels:
-    app: petclinic
-    release: prometheus       # <-- 이게 꼭 있어야 ServiceMonitor가 잡음
-  annotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/path: "/actuator/prometheus"
-    prometheus.io/port: "8080"
 spec:
   selector:
     app: petclinic
-  type: LoadBalancer
+  type: LoadBalancer  # 외부 IP 발급 (클라우드 환경일 경우)
   ports:
-    - name: http  
-    - port: 80
-      targetPort: 8080
+    - port: 80         # 클라이언트가 접속할 포트
+      targetPort: 8080 # 컨테이너 내부 포트
+
 
 # ---
 
