--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.messages.basename=messages/messages
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
-management.server.port=8080  
+server.port=8080  
 
 # Logging
 logging.level.org.springframework=INFO
