--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.messages.basename=messages/messages
 # Actuator
 management.endpoints.web.exposure.include=health,info,prometheus
 # management.endpoint.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 server.port=8080  
 
