--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.messages.basename=messages/messages
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,prometheus
-# management.endpoint.prometheus.enabled=true
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 server.port=8080  
+management.endpoints.enabled-by-default=true  
 
 # Logging
 logging.level.org.springframework=INFO
