--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,5 +3,19 @@ database=mysql
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASS:petclinic}
-# SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
+
+# ✅ Prometheus 메트릭 수집을 위한 Actuator 설정
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
+
+
+
+# database init, supports mysql too
+#database=mysql
+#spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
+#spring.datasource.username=${MYSQL_USER:petclinic}
+#spring.datasource.password=${MYSQL_PASS:petclinic}
+# SQL is written to be idempotent so this is safe
+#spring.sql.init.mode=always
