--- a/k8s/petclinic-monitor.yaml
+++ b/k8s/petclinic-monitor.yaml
@@ -4,7 +4,7 @@ metadata:
   name: petclinic-monitor
   namespace: default
   labels:
-    release: monitoring  # ← Prometheus 헬름 릴리즈 이름과 반드시 일치해야 함
+    release: monitoring
 spec:
   selector:
     matchLabels:
@@ -16,4 +16,31 @@ spec:
     - port: http
       path: /actuator/prometheus
       interval: 15s
+      relabelings:
+        - sourceLabels: [__meta_kubernetes_pod_name]
+          targetLabel: pod
+        - sourceLabels: [__meta_kubernetes_namespace]
+          targetLabel: namespace
+        - sourceLabels: [__meta_kubernetes_pod_container_name]
+          targetLabel: container
+
+
+# apiVersion: monitoring.coreos.com/v1
+# kind: ServiceMonitor
+# metadata:
+#   name: petclinic-monitor
+#   namespace: default
+#   labels:
+#     release: monitoring  # ← Prometheus 헬름 릴리즈 이름과 반드시 일치해야 함
+# spec:
+#   selector:
+#     matchLabels:
+#       app: petclinic
+#   namespaceSelector:
+#     matchNames:
+#       - default
+#   endpoints:
+#     - port: http
+#       path: /actuator/prometheus
+#       interval: 15s
 
